Improved conversation memory response construction